--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -6,29 +6,31 @@
 <!--form-->
 <div class="container">
 <form #myForm = "ngForm" (ngSubmit)= "update()" id = "myForm">
-    <div *ngIf = "userError"class = "alert.alert-danger"> This username is already taken. Try another username</div>
-    <div *ngIf = "successFlag"class = "alert.alert-success"> Update successfully</div>
+    <div *ngIf = "userError" class = "alert.alert-danger"> This username is already taken. Try another username</div>
+    <div *ngIf = "successFlag" class = "alert.alert-success"> Update successfully</div>
    <!--Username-->
     <div class="form-group"> 
-        <label for="username"><b>Username</b></label>
-        <input #userInput = "ngModel" type ="text"class="form-control" [(ngModel)] = "user.Username"  required name= "username" placeholder="Username....">
+        <label><b>Username</b></label>
+        <input #userInput = "ngModel" required class="form-control" [(ngModel)] = "user.Username"  name = "username" placeholder =" Enter Username....">
     </div>
-    <div *ngIf = "userInput.invalid"class = "alert.alert-warning"> Username can't be empty</div>
+    <div *ngIf = "userInput.invalid" class = "alert.alert-warning"> Username can't be empty</div>
      <!--Email Address-->
-     <div class="form-group">
-           <label for="email"><b>Email Address</b></label>
-           <input id="email"type="email" class="form-control"  [(ngModel)] = "user.email" name= "email" placeholder="Email Address...">
+     <div class ="form-group">
+           <label for = "email"><b>Email Address</b></label>
+           <input class="form-control" name="email"  [(ngModel)] = "user.email" placeholder =" Enter Email Address...">
+
+           <small id ="emailHelp" class = "form-text text-muted"> We'll never share your 
+               email with anyone else. </small>
       </div>
      <!--First Name-->
     <div class ="form-group">
           <label for="firstName"><b>First Name</b></label>
-
-          <input id="firstName" type="text" class="form-control"  [(ngModel)] = "user.firstName" name = "firstName" placeholder="First Name....">
+          <input  class="form-control" name ="firstName"  [(ngModel)] = "user.firstName" placeholder="First Name....">
     </div>
      <!--Last Name-->
      <div class="form-group">
           <label for="lastName"><b>Last Name</b></label>
-        <input id="lastName" type="text" class="form-control"  name = "user.lastName"placeholder="Last Name...">
+        <input  class="form-control"  name ="lastName" [(ngModel)]= "user.lastName" placeholder=" Enter Last Name...">
      </div>
      <!--Adding 2 Buttons-->
      <a routerLink="/user/{{uid}}/website"class="btn btn-primary btn-block">websites</a>
