--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -9,13 +9,13 @@
         <ul class="list-group-flush">
 <li class="list-group-item"> <span  (click) = "create('HEADING')" class ='pointer' >Header</span></li>
     <li class="list-group-item"> <span (click) = "create('LABEL')" class = 'pointer'>Label</span></li>
-       <li class="list-group-item"> <span (click) = "create('HTML)" class = 'pointer'>HTML</span></li>
+       <li class="list-group-item"> <span (click) = "create('HTML')" class = 'pointer'>HTML</span></li>
         <li class="list-group-item"> <span (click) = "create('TEXT INPUT')" class = 'pointer'>Text Input</span>
          <li class="list-group-item"> <span (click) = "create('LINK')" class = 'pointer'>Link</span></li>
 <li class="list-group-item"><span (click) = "create('BUTTON')" class = 'pointer' >Button</span></li>
 <li class="list-group-item"><span (click) = "create('IMAGE')" class = 'pointer'>Image</span></li>
 <li class="list-group-item"><span (click) = "create('YOUTUBE')" class = 'pointer'> Youtube</span></li>
-<li class="list-group-item"><span (click) = "create('DATA TABLE')" class = 'pointer'>Data Table</span></li>
+<li class="list-group-item"><span (click) = "create('DATA TABLE')" class = 'pointer'>Data Table </span></li>
 <li class="list-group-item"><span (click) = "create('REAPETER')" class = 'pointer'>Repeater</span></li>                     
         </ul>
 
