--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -33,14 +33,14 @@
               <form id = "myForm" #myForm = "ngForm"  (ngSubmit)= "createWebsite()">
               <div class="form-group">
                   <label for="name"><b> Name</b></label>
-                      <input [(ngModel)] = "name" name = "name" id="name" required name = "name" class="form-control" type="text" placeholder="Name">
+                      <input [(ngModel)] = "name" name = "name" id="name" required class="form-control" type="text" placeholder="Name">
               </div>
               <div class="form-group">
                   <label for="description"> <b>Description</b></label>
-                  <textarea [(ngModel)] = "description" name = "description" id="description"rows="10" class="form-control"type="text" placeholder="Description of your website"></textarea>
+                  <textarea [(ngModel)] = "description" name = "description" id="description" rows="10" class="form-control" type="text" placeholder="Description of your website"></textarea>
               </div> 
-              <a routerLink="/user/{{uid}}/website"class="btn btn-lg btn-warning">Cancel</a>
-              <button class="btn btn-lg btn-success float-right">  Submit </button> <!-- [disabled]="myForm.invalid"-->
+              <a routerLink="/user/{{uid}}/website" class="btn btn-lg btn-warning">Cancel</a>
+              <button class="btn btn-lg btn-success float-right">  Submit </button> 
               </form>
           </div>
        </div>
