--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -3,7 +3,8 @@
   <!-- Left Navigation Panel-->
   <div class="col-4 d-none d-sm-block">
   <a class="color-white" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
-  <a class="color-white padding-left" routerLink="/user/{{uid}}/website/{{wid}}"><h5 class="display-inline">Websites</h5></a>
+  <a class="color-white padding-left" routerLink="/user/{{uid}}/website/{{wid}}">
+    <h5 class="display-inline">Websites</h5></a>
       <a class="color-white float-right" routerLink="/user/{{uid}}/website/new"> <i class="fas fa-plus"></i></a>
   </div>
       <!--Right Navigation Panel-->
@@ -27,22 +28,27 @@
     </div>
  </div>
   <!-- rigt panel form-->
-  <div class="col-sm-8">
-  <div class="container-fluid">
-    <form id = "myForm" #myForm = "ngForm" (ngSubmit) = "update()">
+ <div class = "col-sm-8">
+     <div class = "container-fluid >
+      <form id ="myForm" #myForm = "ngForm"  (ngSubmit) = "update()">
+            <div class = "form-group">
+                <label for="name"> <b> Name</b> </label>
+     <input id = "name" class = "form-control" type="text" placeholder = "Name of website..."
+     [(ngModel)] = "website.name" name = "name">
+</div>
   <div class="form-group">
-      <label for="description"> <b>Description</b></label>
-      <textarea [(ngModel)]= "website.description" name = "description" id="description"rows="5" class="form-control" type="text" placeholder="Description of your website"></textarea>
+        <label for="description"> <b>Description</b></label>   
+      <textarea [(ngModel)]= "website.description" name = "description" id="description" rows="5" class="form-control" type="text" placeholder="Description of your website"></textarea>
   </div> 
   <a routerLink="/user/{{uid}}/website"class="btn btn-lg btn-warning">Cancel</a>
   <button type = "button" (click) = "delete()" class="btn btn-lg btn-danger float-right">Delete</button>
   </form>
     </div>
       </div>
-          </div>
+    </div>
   <!--Footer-->
   <nav class="navbar navbar-dark bg-primary fixed-bottom">
         <div class="full-width" >
             <a class="color-white float-right"routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
         </div>
-      </nav>         
+    </nav>         
