--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -29,7 +29,7 @@
  </div>
   <!-- rigt panel form-->
  <div class = "col-sm-8">
-     <div class = "container-fluid >
+     <div class = "conatainer-fluid">
       <form id ="myForm" #myForm = "ngForm"  (ngSubmit) = "update()">
             <div class = "form-group">
                 <label for="name"> <b> Name</b> </label>
@@ -45,7 +45,6 @@
   </form>
     </div>
       </div>
-    </div>
   <!--Footer-->
   <nav class="navbar navbar-dark bg-primary fixed-bottom">
         <div class="full-width" >
