--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -33,12 +33,14 @@
      </div>
      <!--Adding 2 Buttons-->
      <a routerLink="/user/{{uid}}/website"class="btn btn-primary btn-block">websites</a>
-      <a routerLink="/login" class="btn btn-danger btn-block">Logout</a>
+      <button type ="button" (click) = "logout ()" routerLink="/login" class="btn btn-danger btn-block">Logout</button>
+      <br />
+      <a  *ngIf = "user.damin" class = btn btn-outline-dark" routerLink = "/user-list"> User List</a>
     </form>
     <div>
 <!--Footer-->
 <nav class="navbar navbar-dark bg-primary fixed-bottom">
  <div class="full-width" >
-     <a class="color-white float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
+     <a class="color-white float-right" routerLink="/profile"><i class="fas fa-user"></i></a> 
  </div>
 </nav>
