--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,6 +1,6 @@
   <!--Navbar-->
   <nav class="navbar fixed-top navbar-dark bg-primary">
-    <a class="color-white" routerLink="/user/{{uid}}"><i class="fas fa-chevron-left"></i></a>
+    <a class="color-white" routerLink="/profile"><i class="fas fa-chevron-left"></i></a>
     <div class="left-width">
     <a class="navbar-brand float-left" routerLink="/user/{{uid}}/website"><b>Websites</b></a>
     </div>
@@ -17,6 +17,6 @@
         <!--footer-->
         <nav class="navbar navbar-dark bg-primary fixed-bottom">
            <div class="full-width" >
-               <a class="color-white float-right" routerLink="../User/{{uid}}"><i class="fas fa-user"></i></a> 
+               <a class="color-white float-right" routerLink="/profile"><i class="fas fa-user"></i></a> 
            </div>
          </nav>
