--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -48,7 +48,7 @@
   <!--Footer-->
   <nav class="navbar navbar-dark bg-primary fixed-bottom">
       <div class="full-width" >
-          <a class="color-white float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
+          <a class="color-white float-right" routerLink="/profile"><i class="fas fa-user"></i></a> 
       </div>
       </nav>
   
