--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -51,6 +51,6 @@
 <!--Bottom Navigation Bar Footer-->
 <nav class="navbar navbar-light fixed-bottom bg-light">
   <div class="full-width" >
-    <a class="color-red float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
+    <a class="color-red float-right" routerLink="/profile"><i class="fas fa-user"></i></a> 
   </div>
 </nav>
