--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -32,10 +32,12 @@
         <input  class="form-control"  name ="lastName" [(ngModel)]= "user.lastName" placeholder=" Enter Last Name...">
      </div>
      <!--Adding 2 Buttons-->
-     <a routerLink="/user/{{uid}}/website"class="btn btn-primary btn-block">websites</a>
-      <button type ="button" (click) = "logout ()" routerLink="/login" class="btn btn-danger btn-block">Logout</button>
-      <br />
-      <a  *ngIf = "user.damin" class = btn btn-outline-dark" routerLink = "/user-list"> User List</a>
+     <a routerLink="/user/{{uid}}/website"class="btn btn-primary btn-block">
+        websites</a>
+      <button type="button" (click)= "logout()" class="btn btn-danger btn-block">Logout </button>
+      <br/>
+      <a *ngIf="user.admin" class= "btn btn-outline-dark"
+       routerLink= "/user-list"> User List </a>
     </form>
     <div>
 <!--Footer-->
